--- a/CASOS_USO/CASOS_USO.csproj
+++ b/CASOS_USO/CASOS_USO.csproj
@@ -55,8 +55,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Aeronaves\GestionaAeroanves.cs" />
     <Compile Include="Aeronaves\OperacionesAeronaves.cs" />
+    <Compile Include="Sesiones\GestionSesion.cs" />
     <Compile Include="Socios\GestionaSocios.cs" />
     <Compile Include="Socios\OperacionesSocios.cs" />
+    <Compile Include="Usuarios\GestionaUsuarios.cs" />
+    <Compile Include="Usuarios\OperacionesUsuarios.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
