--- a/CONTROLADORA/CONTROLADORA.csproj
+++ b/CONTROLADORA/CONTROLADORA.csproj
@@ -54,7 +54,9 @@
     <Compile Include="Aeronaves.cs" />
     <Compile Include="Licencias.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sesiones.cs" />
     <Compile Include="Socios.cs" />
+    <Compile Include="Usuarios.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
