--- a/CONTEXTO/CONTEXTO.csproj
+++ b/CONTEXTO/CONTEXTO.csproj
@@ -54,17 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aeroclub.cs" />
-    <Compile Include="Migrations\202302271807181_primea.cs" />
-    <Compile Include="Migrations\202302271807181_primea.designer.cs">
-      <DependentUpon>202302271807181_primea.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202302272149126_Segunda.cs" />
-    <Compile Include="Migrations\202302272149126_Segunda.designer.cs">
-      <DependentUpon>202302272149126_Segunda.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202302272240016_Tercera.cs" />
-    <Compile Include="Migrations\202302272240016_Tercera.designer.cs">
-      <DependentUpon>202302272240016_Tercera.cs</DependentUpon>
+    <Compile Include="Migrations\202302281746591_Primero.cs" />
+    <Compile Include="Migrations\202302281746591_Primero.designer.cs">
+      <DependentUpon>202302281746591_Primero.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -80,14 +72,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202302271807181_primea.resx">
-      <DependentUpon>202302271807181_primea.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202302272149126_Segunda.resx">
-      <DependentUpon>202302272149126_Segunda.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202302272240016_Tercera.resx">
-      <DependentUpon>202302272240016_Tercera.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202302281746591_Primero.resx">
+      <DependentUpon>202302281746591_Primero.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
